k8s/main/templates/forgejo.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forgejo
  ports:
    - name: http
      port: 80
      targetPort: 3001
    - name: http-plain
      port: 3000
      targetPort: 3000
    - name: metrics-anubis
      port: 9090
      targetPort: 9090

---
# StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
spec:
  serviceName: forgejo
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forgejo
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:10-rootless
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: forgejo-data
              mountPath: /var/lib/gitea
        - name: anubis
          image: ghcr.io/xe/x/anubis:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 128Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 3001
            - containerPort: 9090

      volumes:
        - name: forgejo-data
          persistentVolumeClaim:
            claimName: forgejo-data

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - git.sapphiccode.net
      secretName: star-sapphiccode-net-tls
  rules:
    - host: git.sapphiccode.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo
                port:
                  name: http
