k8s/main/templates/ir-vault.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.sapphiccode.net`)
      services:
        - name: vault-ui
          port: 8200
          serversTransport: insecure
  tls:
    certResolver: cloudflare
    domains:
      - main: '*.sapphiccode.net'
