k8s/main/templates/jenkins.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phoenix-jenkins

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: phoenix-jenkins
spec:
  selector:
    app.kubernetes.io/name: jenkins
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
    - name: agent
      protocol: TCP
      port: 50000
      targetPort: 50000

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: ExternalName
  externalName: jenkins.phoenix-jenkins.svc.cluster.local

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-ci
  namespace: phoenix-jenkins
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    # allow comms with jenkins
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: phoenix-jenkins
          podSelector:
            matchLabels:
              app.kubernetes.io/name: jenkins
      ports:
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 50000

    # allow DNS & accessing self (Traefik)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

    # allow internet access
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/20
              - 100.64.0.0/10

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  namespace: phoenix-jenkins
spec:
  serviceName: jenkins
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jenkins
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jenkins
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: docker.io/jenkins/jenkins:latest
          ports:
            - containerPort: 8080
            - containerPort: 50000
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
          resources:
            limits:
              memory: 1024Mi
            requests:
              cpu: 1000m
              memory: 1024Mi

        - name: anubis
          image: ghcr.io/xe/x/anubis:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 128Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8081
            - containerPort: 9090
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins-data

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jci.sapphiccode.net
      secretName: star-sapphiccode-net-tls
  rules:
    - host: jci.sapphiccode.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 80
